--- a/app.wxss
+++ b/app.wxss
@@ -13,3 +13,8 @@ page { margin: 0; padding: 0; color: #353535; background: #f8f8f8; font-size: 12
 .yc-ellipsis.text-line-1 { -webkit-line-clamp: 1; }
 .yc-ellipsis.text-line-2 { -webkit-line-clamp: 2; }
 .yc-ellipsis.text-line-3 { -webkit-line-clamp: 3; }
+
+@keyframes playing {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
