--- a/pages/music/index.wxml
+++ b/pages/music/index.wxml
@@ -22,7 +22,7 @@
                 <text>{{(index < 9 ? '0' : '') + (index+1) + '.'}}</text>
                 <image class='hidden' src="{{item.cover}}"></image>
             </view>
-            <view class='song-info'>
+            <view class='song-info' bindtap='bindPlayFunc' data-index='{{index}}'>
                 <view class="yc-ellipsis text-line-1">{{item.title}}</view>
                 <view class="yc-ellipsis text-line-1">{{item.singer}}</view>
             </view>
