--- a/pages/music/player.wxml
+++ b/pages/music/player.wxml
@@ -7,6 +7,7 @@
 
     <view class='song-player {{songStatus}}'>
         <image class='disc' src="{{currentSong.cover}}" lazy-load='true'></image>
+        <image class='axis' src="../../images/music/disc.png"></image>
         <image class='stylus' src="../../images/music/stylus-plus.png"></image>
     </view>
 
