--- a/pages/music/index.wxss
+++ b/pages/music/index.wxss
@@ -10,7 +10,6 @@
 .song-playing-view image {
     margin: 0 0 0 20rpx;
     width: 80rpx; height: 80rpx;
-    border-radius: 50%;
     background-color: #eee;
 }
 .song-playing-view .song-info {
@@ -58,6 +57,11 @@ scroll-view.playing { height: 90vh; }
     background: #fff;
     border-radius: 3px;
 }
+.song-list-bottom {
+    margin: 30rpx 0;
+    text-align: center;
+    color: #b2b2b2; font-size: 10pt;
+}
 .song-list-item {
     margin: 10px 0;
     display: flex;
@@ -75,7 +79,7 @@ scroll-view.playing { height: 90vh; }
 .song-list-item .song-index image {
     width: 80rpx; height: 80rpx;
     background-color: #eee;
-    /* border-radius: 50%; */
+    border-radius: 50%;
 }
 .song-list-item .song-info {
     width: 430rpx;
@@ -108,12 +112,12 @@ scroll-view.playing { height: 90vh; }
 .song-list-item.playing .song-opt image:last-child { display: block; }
 
 
-.song-playing-view.playing>image {
+.song-list-item.playing .song-index image {
     animation: playing 5s linear infinite;
     animation-play-state: running;
     -webkit-animation-play-state: running;
 }
-.song-playing-view.pause>image {
+.song-list-item.pause .song-index image {
     animation: playing 5s linear infinite;
     animation-play-state: paused;
     -webkit-animation-play-state: paused;
