--- a/pages/wallpaper/index.wxss
+++ b/pages/wallpaper/index.wxss
@@ -31,3 +31,41 @@ view.layout-5 {
 .layout-3 image {
   width: 230rpx; height: 410rpx;
 }
+
+.info-btn {
+  width: 50rpx; height: 50rpx;
+  border-radius: 50%; 
+  position: fixed;
+  right: 50rpx; bottom: 50rpx; z-index: 10;
+}
+.info-btn image { border-radius: 50%; }
+
+.info {
+  width: 100vw; height: 40vh;
+  color: #fff;
+  position: fixed;
+  left: 0; bottom: -40vh;
+  z-index: 1;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+.info.active { bottom: 0; }
+.info .bg {
+  width: 100%; height: 100%;
+  background: #000;
+  opacity: .5;
+}
+.info .content {
+  width: 100%; height: 100%;
+  padding: 50rpx;
+  color: #fff;
+  position: absolute;
+  left: 0; top: 0; z-index: 2;
+}
+.info .content text {
+  width: 650rpx;
+  margin: 20rpx 0;
+  font-size: 10pt;
+  display: block;
+
+}
