--- a/pages/wallpaper/index.wxss
+++ b/pages/wallpaper/index.wxss
@@ -4,13 +4,13 @@ image {
 }
 view.layout-3,
 view.layout-5 {
-  padding: 8rpx 15rpx;
+  padding: 6rpx 15rpx;
   display: flex;
   justify-content: space-between;
 }
 .layout-5-left,
 .layout-5-right {
-  width: 352rpx; height: 626rpx;
+  width: 354rpx; height: 620rpx;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,18 +18,18 @@ view.layout-5 {
 
 .layout-5-right-top,
 .layout-5-right-bottom {
-  width: 352rpx; height: 305rpx;
+  width: 354rpx; height: 304rpx;
   display: flex;
   justify-content: space-between;
 }
 
 .layout-5-right-top image,
 .layout-5-right-bottom image {
-  width: 168rpx; height: 305rpx;
+  width: 171rpx; height: 304rpx;
 }
 
 .layout-3 image {
-  width: 230rpx; height: 410rpx;
+  width: 232rpx; height: 412rpx;
 }
 
 .info-btn {
@@ -38,7 +38,7 @@ view.layout-5 {
   position: fixed;
   right: 50rpx; bottom: 50rpx; z-index: 10;
 }
-.info-btn image { border-radius: 50%; }
+.info-btn image { border: none; border-radius: 50%; }
 
 .info {
   width: 100vw; height: 40vh;
@@ -67,5 +67,4 @@ view.layout-5 {
   margin: 20rpx 0;
   font-size: 10pt;
   display: block;
-
 }
