--- a/pages/wallpaper/index.wxml
+++ b/pages/wallpaper/index.wxml
@@ -1,3 +1,4 @@
+<yc-list-view loading="{{loading}}">
 <block wx:for="{{dataList}}" wx:key="{{index}}">
 
   <view class='layout-5'>
@@ -21,6 +22,7 @@
     <image src='{{item[7]}}' lazy-load='true' data-src='{{item[7]}}' data-list='{{item}}' data-index='{{index}}' data-pos='7' binderror='bindImageError' bindtap='previewImage'></image>
   </view>
 </block>
+</yc-list-view>
 
 <view class='info-btn' bindtap='toggleInfoView'>
   <image src='../../images/info.png'></image>
