--- a/pages/demo/video.wxml
+++ b/pages/demo/video.wxml
@@ -1,1 +1,6 @@
 <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
+
+<video src='https://www.zhihuibian.com/upload/video/yanshi.mp4'></video>
+
+
+<video src='https://v.qq.com/iframe/preview.html?width=500&height=375&auto=0&vid=p1351fycsoe'></video>
